# amazon-ads-api-python-sdk

./: .gitignore  API_TIER.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION_GUIDE.md  README.md  download_specs.py  pyproject.toml  pytest.ini  requirements-test.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
amazon_ads_api/: __init__.py  base.py  client.py
amazon_ads_api/accounts/: __init__.py  billing.py  budgets.py  portfolios.py  profiles.py  test_accounts.py
amazon_ads_api/ad_library/: __init__.py  ad_library.py
amazon_ads_api/ads_data_manager/: ads_data_manager.py
amazon_ads_api/amazon_ads_v1/: __init__.py  unified_api.py
amazon_ads_api/amc/: __init__.py  audiences.py  queries.py  workflows.py
amazon_ads_api/audiences_discovery/: __init__.py  audiences_discovery.py
amazon_ads_api/brand_associations/: __init__.py  brand_associations.py
amazon_ads_api/brand_home/: __init__.py  brand_home.py
amazon_ads_api/common/: __init__.py  assets.py  attribution.py  history.py  stores.py
amazon_ads_api/core/: __init__.py
amazon_ads_api/data_provider/: __init__.py  hashed_records.py  metadata.py  records.py
amazon_ads_api/dsp/: __init__.py  advertisers.py  audiences.py  conversions.py  creatives.py  inventory.py  line_items.py  measurement.py  orders.py  target_kpi.py
amazon_ads_api/eligibility/: eligibility.py
amazon_ads_api/experimental/: __init__.py
amazon_ads_api/exports/: exports.py
amazon_ads_api/insights/: __init__.py  audience_insights.py  category_insights.py  keyword_insights.py
amazon_ads_api/localization/: localization.py
amazon_ads_api/locations/: locations.py
amazon_ads_api/manager_accounts/: __init__.py  manager_accounts.py
amazon_ads_api/media_planning/: __init__.py  reach_forecasting.py
amazon_ads_api/moderation/: __init__.py  pre_moderation.py  unified_moderation.py
amazon_ads_api/posts/: __init__.py  posts.py
amazon_ads_api/product_metadata/: __init__.py  product_metadata.py
examples/: README.md  basic_usage.py  saas_integration.py
scripts/: deep_verify.py  run_tests.py  verify_coverage.py
specs/: AMCAdministration_prod_3p.json  AdLibraryAPI_prod_3p.json  AdvertisingBilling_prod_3p.json  AmazonAdsAPIALLMerged_prod_3p.json  AmazonAdsAPIExports_prod_3p.json  AmazonMarketingStream_prod_3p.json  BrandHome_prod_3p.json  Insights_prod_3p.json  Localization_prod_3p.json  Posts_prod_3p.json  Recommendations_prod_3p.json  SponsoredProducts_prod_3p.json  SponsoredTV_prod_3p.json
tests/: README.md  conftest.py  test_imports.py
(+177 files in other folders)
